Initial commit with project files

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "freelance-wallet",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://artemulitin.github.io/miniapp",
+  "homepage": "https://artem123213432.github.io/miniapp",
   "dependencies": {
     "@reduxjs/toolkit": "^2.0.1",
     "react": "^18.2.0",
